# cool-app

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  env.sample  pyproject.toml
.github/: dependabot.yml
cool_app/: __init__.py  __main__.py  consumer.py  models.py  producer.py  settings.py
tests/: test_cool_app.py
