[tool.poetry]
name = "cool-app"
version = "0.1.0"
description = ""
authors = ["Abraham Yusuf <abraham.yusuf@ehealthnigeria.org>"]

[tool.poetry.dependencies]
python = "^3.6"
sqlalchemy = "^1.2"
pika = "^0.12.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
