[tool.poetry]
name = "cool-app"
version = "0.1.0"
description = "A simple message processing app"
authors = ["Abraham Yusuf <abraham.yusuf@ehealthnigeria.org>"]

[tool.poetry.dependencies]
python = "^3.6"
sqlalchemy = "^1.2"
pika = "^0.12.0"
psycopg2 = "^2.7"
pandas = "^0.23.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
cool_app = "cool_app:__main__.main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
